RESOLVED FIXED304794
SVG <stop> offset attribute incorrectly accepts invalid values with trailing
https://bugs.webkit.org/show_bug.cgi?id=304794
Summary SVG <stop> offset attribute incorrectly accepts invalid values with trailing
Ahmad Saleem
Reported 2025-12-30 20:24:52 PST
it is whitespace handling issue with SVG.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-30 20:25:01 PST
Ahmad Saleem
Comment 2 2025-12-30 20:28:08 PST
EWS
Comment 3 2026-01-01 02:49:33 PST
Committed 305036@main (808edf62942c): <https://commits.webkit.org/305036@main> Reviewed commits have been landed. Closing PR #55955 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.